refactor: streamline Foosball statistics handling and remove position stats endpoint
- Removed position statistics retrieval and display from FoosballController and foosball.html.
- Updated FoosballService to calculate player stats directly from game data when the API is unavailable.
- Enhanced player stats calculation logic to include win percentages and improved data representation.